tests/fixtures/invalid/block_scoped_named_aggregate_tag_out_of_scope.c
int main(void) {
    {
        struct Hidden {
            int x;
        };
        struct Hidden value = {1};
        (void)value.x;
    }
    struct Hidden value = {2};
    return value.x;
}
